@@ -1,5 +1,8 @@
 Changes with APR-util 1.3.0
 
+  *) Fix bug in test suite that cause testbuckets to write 8GB file
+     on Mac OS X.  [Justin Erenkrantz]
+
   *) Teach configure how to find the Novell LDAP SDK. [Graham Leggett]
 
   *) Fix GMT offset for several date formats and add a new format.
